# stklos-gtk-canvas

./: README  stklos-gtk-canvas.spi
doc/: Makefile  stklos-gtk-canvas.txt
etc/: meta
example/: C.stk  Makefile  canvas-in-C.c  canvas.stk
stklos/: Makefile.in  configure  configure.in  stklos-gtk-canvas.c  stklos-gtk-canvas.spi  stklos-gtk-canvas.stk.in  utils-absent.stk  utils-present.stk
test/: stklos-gtk-canvas-test.spi  stklos-gtk-canvas-test.stk
